--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-Flask==3.0.3
-gunicorn==22.0.0
-flask-cors==4.0.1
-gspread==6.1.4
-google-auth==2.35.0
-pytz==2024.1
-requests==2.32.3
-python-dotenv==1.0.1
-
-
+Flask==2.3.2
+gunicorn
+python-telegram-bot==20.3
+waitress==2.1.2
+requests
